--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "untitled4",
-  "version": "0.1.0",
+  "name": "homework-5-test",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export"
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "dayjs": "^1.11.11",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "13.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "typescript": "4.9.4"
   }
 }
